Fix the error message for the init of RWS client
I forgot this in commit 30af7f39bf6f99c584cfc9d48e357c84c4bbd842.

--- a/static/Ranking.css
+++ b/static/Ranking.css
@@ -1127,7 +1127,9 @@ body.user_panel .UserPanel_bg {
 #network_status_box[data-status="disconnected"] #network_status_label,
 #network_status_box[data-status="disconnected"] #network_status_text,
 #network_status_box[data-status="outdated"] #network_status_label,
-#network_status_box[data-status="outdated"] #network_status_text {
+#network_status_box[data-status="outdated"] #network_status_text,
+#network_status_box[data-status="init_error"] #network_status_label,
+#network_status_box[data-status="init_error"] #network_status_text {
     background-color: red;
     color: white;
     border-color: red;
