--- a/static/Ranking.css
+++ b/static/Ranking.css
@@ -527,30 +527,27 @@ div.team_search div.search_results div.body div.item img {
    own prefix and we have to handle them all. In particular: for each animation
    we have to set three properties on a specific selector and we have to define
    a set of keyframes. We use the unprefixed rules and the following prefixes:
-    -webkit-...  -moz-...  -ms-...  -o-...
+    -webkit-...  -moz-...  -o-...
 
    In addition, we have to cover some particular cases. A row that's being
    animated can seleted or unselected. Thus, we have the following cases:
     ("selected_")? "score_" ("up"|"down")
 
-   Just to give some numbers: we have 20 sets of keyframes in total.
+   Just to give some numbers: we have 16 sets of keyframes in total.
  */
 
 #Scoreboard_body tr.score_up td.rank {
     border-radius: 5px;
     -webkit-animation-duration: 5s;
        -moz-animation-duration: 5s;
-        -ms-animation-duration: 5s;
          -o-animation-duration: 5s;
             animation-duration: 5s;
     -webkit-animation-name: score_up;
        -moz-animation-name: score_up;
-        -ms-animation-name: score_up;
          -o-animation-name: score_up;
             animation-name: score_up;
     -webkit-animation-timing-function: ease-in;
        -moz-animation-timing-function: ease-in;
-        -ms-animation-timing-function: ease-in;
          -o-animation-timing-function: ease-in;
             animation-timing-function: ease-in;
 }
@@ -559,17 +556,14 @@ div.team_search div.search_results div.body div.item img {
     border-radius: 5px;
     -webkit-animation-duration: 5s;
        -moz-animation-duration: 5s;
-        -ms-animation-duration: 5s;
          -o-animation-duration: 5s;
             animation-duration: 5s;
     -webkit-animation-name: score_down;
        -moz-animation-name: score_down;
-        -ms-animation-name: score_down;
          -o-animation-name: score_down;
             animation-name: score_down;
     -webkit-animation-timing-function: ease-in;
        -moz-animation-timing-function: ease-in;
-        -ms-animation-timing-function: ease-in;
          -o-animation-timing-function: ease-in;
             animation-timing-function: ease-in;
 }
@@ -581,12 +575,6 @@ div.team_search div.search_results div.body div.item img {
 }
 
 @-moz-keyframes score_up {
-    from {background-color: rgba(138,226,52,0);}
-    10% {background-color: rgba(138,226,52,0.6);}
-    to {background-color: rgba(138,226,52,0);}
-}
-
-@-ms-keyframes score_up {
     from {background-color: rgba(138,226,52,0);}
     10% {background-color: rgba(138,226,52,0.6);}
     to {background-color: rgba(138,226,52,0);}
@@ -616,12 +604,6 @@ div.team_search div.search_results div.body div.item img {
     to {background-color: rgba(239,41,41,0);}
 }
 
-@-ms-keyframes score_down {
-    from {background-color: rgba(239,41,41,0);}
-    10% {background-color: rgba(239,41,41,0.6);}
-    to {background-color: rgba(239,41,41,0);}
-}
-
 @-o-keyframes score_down {
     from {background-color: rgba(239,41,41,0);}
     10% {background-color: rgba(239,41,41,0.6);}
@@ -638,17 +620,14 @@ div.team_search div.search_results div.body div.item img {
     border-radius: 5px;
     -webkit-animation-duration: 10s;
        -moz-animation-duration: 10s;
-        -ms-animation-duration: 10s;
          -o-animation-duration: 10s;
             animation-duration: 10s;
     -webkit-animation-name: selected_score_up;
        -moz-animation-name: selected_score_up;
-        -ms-animation-name: selected_score_up;
          -o-animation-name: selected_score_up;
             animation-name: selected_score_up;
     -webkit-animation-timing-function: ease-in;
        -moz-animation-timing-function: ease-in;
-        -ms-animation-timing-function: ease-in;
          -o-animation-timing-function: ease-in;
             animation-timing-function: ease-in;
 }
@@ -657,17 +636,14 @@ div.team_search div.search_results div.body div.item img {
     border-radius: 5px;
     -webkit-animation-duration: 10s;
        -moz-animation-duration: 10s;
-        -ms-animation-duration: 10s;
          -o-animation-duration: 10s;
             animation-duration: 10s;
     -webkit-animation-name: selected_score_down;
        -moz-animation-name: selected_score_down;
-        -ms-animation-name: selected_score_down;
          -o-animation-name: selected_score_down;
             animation-name: selected_score_down;
     -webkit-animation-timing-function: ease-in;
        -moz-animation-timing-function: ease-in;
-        -ms-animation-timing-function: ease-in;
          -o-animation-timing-function: ease-in;
             animation-timing-function: ease-in;
 }
@@ -679,12 +655,6 @@ div.team_search div.search_results div.body div.item img {
 }
 
 @-moz-keyframes selected_score_up {
-    from {background-color: rgba(138,226,52,0);}
-    5% {background-color: rgba(138,226,52,1);}
-    to {background-color: rgba(138,226,52,0);}
-}
-
-@-ms-keyframes selected_score_up {
     from {background-color: rgba(138,226,52,0);}
     5% {background-color: rgba(138,226,52,1);}
     to {background-color: rgba(138,226,52,0);}
@@ -709,12 +679,6 @@ div.team_search div.search_results div.body div.item img {
 }
 
 @-moz-keyframes selected_score_down {
-    from {background-color: rgba(239,41,41,0);}
-    5% {background-color: rgba(239,41,41,1);}
-    to {background-color: rgba(239,41,41,0);}
-}
-
-@-ms-keyframes selected_score_down {
     from {background-color: rgba(239,41,41,0);}
     5% {background-color: rgba(239,41,41,1);}
     to {background-color: rgba(239,41,41,0);}
